--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,4 +22,4 @@ jobs:
           chmod 600 keyfile
           mkdir -p ~/.ssh
           cp known_hosts ~/.ssh/known_hosts
-          ssh -t -i keyfile ubuntu@ec2-16-170-254-18.eu-north-1.compute.amazonaws.com "sudo bash ~/deploy.sh"
+          ssh -v -t -i keyfile ubuntu@ec2-16-170-254-18.eu-north-1.compute.amazonaws.com "sudo bash ~/deploy.sh"
